# mio

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: compile.yml
cmake/: mio-config.cmake.in
include/mio/: mmap.hpp
include/mio/detail/: mmap.ipp
single_include/mio/: mio.hpp
test/: CMakeLists.txt  plain.cpp  test.cpp
